<resources>
    <string name="app_name">E2EE IM</string>
    <string name="test_custom_message">View Details>></string>
    <string name="disclaimers_titles">Disclaimers</string>
    <string name="disclaimers_1">Due to the strong security of end-to-end encryption, your messages will not be eavesdropped during transmission</string>
    <string name="disclaimers_2">Therefore, you need to accept the following agreement</string>
    <string name="disclaimers_3">\t1. Do not make any statement involving pornography, gambling, drugs or any other harm to national security</string>
    <string name="disclaimers_4">\t2. Talk positively, love the party and the country</string>
    <string name="disclaimers_5">\t3. Any comments I make only represent my personal views and have nothing to do with the software author</string>
    <string name="disclaimers_6">\t4. I will take full responsibility for my speech</string>
    <string name="disclaimers_7">This software is only used for learning and communication, and any commercial behavior and random dissemination are prohibited</string>
    <string name="disclaimers_accept">I Accept</string>
    <string name="disclaimers_refuse">I Refuse</string>
    <string name="disclaimers_thank">Thank you for your understanding</string>
    <string name="disclaimers_key">Please read carefully. If you refuse, you will not be able to assign public and private keys</string>
    <string name="account">Username</string>
    <string name="password">Password</string>
    <string name="password_again">PasswordAgain</string>
    <string name="demo_login_country_or_region_label">Country/Region</string>
    <string name="demo_area_code_title">Select a country or region</string>
    <string name="demo_language_title">Language</string>
    <string name="demo_login_chinese_mainland">Chinese Mainland</string>
    <string name="demo_login_mobile_phone_number">Phone Number</string>
    <string name="demo_login_verification_code_label">Verification Code</string>
    <string name="demo_search">Search</string>
    <string name="login_title">E2EE IM</string>
    <string name="login_sub_title">Welcome to use this APP to experience Tencent Cloud IM products and services</string>
    <string name="input_number">Enter mobile number</string>
    <string name="input_verification">Enter SMS verification code</string>
    <string name="verification_code">Send Code</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="password_login">Log in via password</string>
    <string name="official_website">Visit Us</string>
    <string name="debug_mode_summary">IM login screen that is only visible in debug mode.</string>
    <string name="account_hint">Please input account.</string>
    <string name="repeat_login_tip">Your account has been logged in on another device.</string>
    <string name="expired_login_tip">Account expired. Log in again.</string>
    <string name="failed_login_tip">Login failed</string>
    <string name="profile">Me</string>
    <string name="modify_user_icon">Profile Photo</string>
    <string name="modify_nick_name">Name</string>
    <string name="modify_signature">Status</string>
    <string name="modify_account">Account</string>
    <string name="add_rule">Friend Request</string>
    <string name="allow_type_allow_any">Allow any user to add you as friend</string>
    <string name="allow_type_deny_any">Decline friend request from any user</string>
    <string name="allow_type_need_confirm">Anyone upon Request</string>
    <string name="exit">Log Out</string>
    <string name="about_im">About Tencent Cloud·IM</string>
    <string name="modify_birthday">Birthday</string>
    <string name="modify_gender">Gender</string>
    <string name="cancel_account">Cancel Account</string>
    <string name="cancel_account_alert_tip">Are you sure you want to cancel this account?</string>
    <string name="cancel_account_tip">After canceling this account, you will be unable to use it, and related data will be permanently deleted. Current account: %s</string>
    <string name="cancel_account_error_msg">Cancellation failed. No token or mobile number associated with the current account is detected. Please log in with your mobile number.</string>
    <string name="cancel_account_successful">Canceled</string>
    <string name="self_infomation_collection_list">Personal Information Collected</string>
    <string name="third_part_shared_list">Information Shared with Third Parties</string>
    <string name="modify_theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="lively_theme">Lively</string>
    <string name="serious_theme">Solemn</string>
    <string name="modify_language">Language</string>
    <string name="demo_language">English</string>
    <string name="demo_theme_light">light</string>
    <string name="demo_signature_tag">Status : </string>
    <string name="demo_account_tag">ID : </string>
    <string name="demo_about_sdk_version">SDK Version</string>
    <string name="demo_about_im">About</string>
    <string name="demo_contact_us">Contact us</string>
    <string name="demo_self_detail_gender_male">Male</string>
    <string name="demo_self_detail_gender_female">Female</string>
    <string name="demo_self_detail_gender_unknown">Unknown</string>
    <string name="demo_self_detail_modify_nickname">Name</string>
    <string name="demo_self_detail_modify_signature">Status</string>
    <string name="demo_no_status">No status</string>
    <string name="demo_self_detail_modify_gender">Gender</string>
    <string name="demo_self_detail_modify_nickname_rule">Only letters, digits, underscores, and Chinese characters.</string>
    <string name="tab_contact_tab_text">Contacts</string>
    <string name="tab_conversation_tab_text">Message</string>
    <string name="tab_profile_tab_text">Me</string>
    <string name="conversation_title">E2EE·IM</string>
    <string name="contact_title">Contacts</string>
    <string name="add_friend">Add Contact</string>
    <string name="add_group">Add Group</string>
    <string name="start_conversation">New Chat</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="create_chat_room">Create Chat Room</string>
    <string name="create_community">Create Community</string>
    <string name="create_private_group">Create Discussion Group</string>
    <string name="test_excluded_from_unread_count_action">Message excluded from unread count</string>
    <string name="privacy_text">Agreed to <a href="http://privacy.qq.com/">Privacy Policy</a></string>
    <string name="no_support_msg">Unsupported custom messages</string>
    <string name="live">\'s live stream</string>
    <string name="living">In Progress</string>
    <string name="stop_live">End Live Stream</string>
    <string name="http_error_invalid">Username must begin with a letter and should be a combination of 3-23 letters and numbers.</string>
    <string name="http_error_user">User already exists.</string>
    <string name="http_error_server">Server error</string>
    <string name="http_error_no_user">User does not exist.</string>
    <string name="http_error_password">Incorrect password</string>
    <string name="not_retry_more">Do not send too many verification codes.</string>
    <string name="input_phone">Enter valid mobile number</string>
    <string name="verify_code_fail">Failed to get verification code:</string>
    <string name="send_verify_code">Verification code sent</string>
    <string name="input_phone_code">Enter the mobile number and verification code</string>
    <string name="login_fail_tip">Login failed:</string>
    <string name="login_suc_tip">Login successful</string>
    <string name="second">s</string>
    <string name="get_verify_code">Send Code</string>
    <string name="permission_tip">Not fully authorized. Some features may not be available.</string>
    <string name="logout_tip">Log out now?</string>
    <string name="online_fail">Network request failed</string>
    <string name="online">Online</string>
    <string name="unknow_error">Unknown error</string>
    <string name="you_app">Your App</string>
    <string name="low_version"> The version is too low. Unable to open the offline message.</string>
    <string name="call_timeout">Call timed out</string>
    <string name="call_notification">Voice/Video Call Notifications</string>
    <string name="background_tip">When the program is running in the background, new incoming call notifications will be displayed in the Notifications bar.</string>
    <string name="new_msg_notification">New Messages</string>
    <string name="new_msg">You\'ve received a new message.</string>
    <string name="call_nos">No response</string>
    <string name="login_password_tips">1~16 characters(letters+numbers)</string>
    <string name="login_user_tips">Letters start, 4~24 characters(letters+numbers)</string>
    <string name="login_agree_privacy_regulations">\"Privacy Policy\"</string>
    <string name="login_agree_privacy_regulations_summary">\"Summary of Privacy Policy"\</string>
    <string name="login_agree_user_agreement">\"User Agreement\"</string>
    <string name="login_agree_self_infomation_collection_list">\"Personal Information Collected\"</string>
    <string name="login_agree_third_part_shared_list">\"Information Shared with Third Parties\"</string>
    <string name="im_privacy">Privacy Policy</string>
    <string name="im_statement">Disclaimer</string>
    <string name="im_user_agreement">User Agreement</string>
    <string name="im_statement_content">Tencent Cloud Instant Messaging APP  (\"this product\") is a test product provided by Tencent Cloud, and Tencent Cloud enjoys the copyright and ownership of this product. This product is only used for functional experience and must not be used for any commercial purposes. In order to comply with the regulatory requirements of relevant departments, any pornography, abusive, violent, and politically related content is strictly prohibited during use.</string>
    <string name="im_privacy_tips">Read and agree to the agreement first</string>
    <string name="demo_im_privacy_dialog_tips">Welcome to Tencent Cloud Instant Messaging. To protect your personal information, we have updated the \"Privacy Policy\", involving improving the specific contents and purposes of collecting user information, and adding third-party SDKs.\n\n Please carefully read the \"User Agreement\",\"Summary of Privacy Policy\",\"Privacy Policy\",\"Personal Information Collected\" and \"Information Shared with Third Parties\", and tap Agree and Continue to use our products and services if you agree to them.</string>
    <string name="demo_im_privacy_agree">Agree and Continue</string>
    <string name="demo_im_privacy_refuse_and_exit">Disagree and Exit</string>
    <string name="get_verify_code_error">An error occurred while getting the verification code. Refresh and try again. (%d)</string>
    <string name="modify_group_name">Edit Group Name</string>
    <string name="input_tip">No nickname. Enter again.</string>
    <string name="call_time_out">time out</string>
    <string name="mark_all_message_as_read_succ">Cleared unread messages successfully</string>
    <string name="mark_all_message_as_read_err_format">Failed to clear unread messages. %d, %s</string>
    <string name="demo_profile_detail">Details</string>
    <string name="demo_message_read_switch_title">Message read status</string>
    <string name="demo_message_read_switch_open_tip">This feature is the flagship version feature</string>
    <string name="demo_message_read_switch_open_text">If disabled, the message read status is hidden for all your messages and for all the messages sent by members in a chat.</string>
    <string name="demo_message_read_switch_close_text">If enabled, the message read status is displayed for all your messages and for all the messages sent by members in a chat.</string>
</resources>